--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@types/chrome": "^0.0.181",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^4.5.2",
+    "postcss": "^8.4.19",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^3.2.4",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
@@ -30,6 +34,7 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.16"
+    "@mui/material": "^5.10.16",
+    "styled-components": "^5.3.6"
   }
 }
