--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
+    "react-draggable": "^4.4.5",
     "styled-components": "^5.3.6"
   }
 }
