--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -10,7 +10,7 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "React Extension",
+    "default_title": "Weather Chrome Extension",
     "default_icon": "icon.png"
   },
   "permissions": ["storage", "contextMenus", "alarms"],
