--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -26,3 +26,12 @@ jobs:
         run: |
           npm install
           npm run build
+
+  zip-files:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: vimtor/action-zip@v1
+        with:
+          files: dist
+          dest: result.zip
